--- a/about.html
+++ b/about.html
@@ -8,8 +8,9 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #e8f5e9;
-      color: #333;
+       background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjkEPHZF8ZjdanPWjdBmqEqT7YDowq6sy_UA&s') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
     }
     header {
       background-color: #2e7d32;
