--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 GreenSpace. All rights reserved.</p>
+      <p>&copy; 2025 Vatika. All rights reserved.</p>
     </footer>
   </div>
 </body>
