--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 GreenSpace. All rights reserved.</p>
+    <p>&copy; 2025 Vatika. All rights reserved.</p>
   </footer>
 </body>
 </html>
