--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
+         <li><a href="contact.html">contact</a></li>
         <li><a href="cart.html">Cart</a></li>
       </ul>
     </nav>
