--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GreenSpace - Cart</title>
+  <title>VATIKA - Cart</title>
   <style>
     body {
       margin: 0;
@@ -104,7 +104,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 GreenSpace. All rights reserved.</p>
+    <p>&copy; 2025 Vatika. All rights reserved.</p>
   </footer>
 
   <script>
