--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VATIKA - Cart</title>
+  <title>GreenSpace - Cart</title>
   <style>
     body {
       margin: 0;
@@ -86,7 +86,7 @@
 </head>
 <body>
   <header>
-    <h1>GreenSpace</h1>
+    <h1>VATIKA</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
